# MarketMicroTrader

./: .replit  alpha_signals.py  app.py  backtesting.py  data_ingestion.py  demo_data_generator.py  execution_simulator.py  feature_engineering.py  pyproject.toml  replit.md  utils.py
attached_assets/: Pasted-Build-a-systematic-trading-engine-that-uses-real-time-market-microstructure-data-from-a-public-API--1750892908155_1750892908155.txt
